UI fixes...
Stable working version using our own conduitLib cpp library and kotlin interface. No crashes on exit.